# recordhelper

./: CLEANUP_SUMMARY.md  ENHANCED_NOTIFICATION_SYSTEM.md  FASTAPI_MIGRATION.md  FAVICON_SETUP.md  GEMINI_AUDIO_GUIDE.md  GEMINI_AUDIO_TRANSCRIPTION_UPDATE.md  LOCAL_WHISPER_GUIDE.md  README.md  SPEECH_TO_TEXT_OPTIONS.md  UV_BEST_PRACTICES.md  UV_SYNC_GUIDE.md  add_uv_aliases.sh  alembic.ini  audio_service.py  check_test_user.py  config.py  create_test_user.py  debug_recording_process.py  deepgram_service.py  demo_deepgram_switch.py  env_example.txt  faster_whisper_service.py  fix_alembic_version.py  fix_ssl.py  gemini_audio_service.py  gemini_service.py  inspect_assemblyai_response.py  line_bot_service.py  local_whisper_service.py  main.py  main_fastapi.py  migrate_db.py  migrate_to_uv.sh  models.py  pyproject.toml  pyproject.toml.new  requirements.txt  requirements_flask_legacy.txt  run_fastapi.py  setup_ssl.sh  (+29 more)
alembic/: env.py
api_fastapi/: __init__.py  analysis.py  auth.py  prompt_templates.py  recordings.py  system.py  users.py
core/: error_handlers.py  lifespan.py  logging_config.py  middleware.py  system_routes.py
docs/: ASSEMBLYAI_INTEGRATION.md  GEMINI_AUDIO_IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  SERVICE_SEPARATION_FIX.md  SPEECH_TO_TEXT_FALLBACK_CONFIG.md  SRT_FORMAT_GUIDE.md  SRT_ONLY_MODE.md  SRT_SUBTITLE_SUPPORT.md  performance_optimization.md
models/: __init__.py  analysis.py  analysis_history.py  async_models.py  device_token.py  prompt_template.py  recording.py  user.py
recordhelper/: main.py  requirements.txt
services/: __init__.py  auth.py  recording_processing_service.py
tests/: __init__.py  demo_deepgram_switch.py  quick_srt_test.py  test_assemblyai.py  test_faster_whisper.py  test_fixes.py  test_gemini_audio.py  test_gemini_transcription.py  test_local_whisper.py  test_modules.py  test_project_structure.py  test_speech_to_text.py  test_srt_real_world.py  test_srt_support.py  (+3 more)
(+30 files in other folders)
