[project]
name = "recordhelper"
version = "0.1.0"
description = "錄音分析助手後端服務"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "email-validator==2.2.0",
    # 認證和安全
    "PyJWT==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.0",
    # 資料庫
    "SQLAlchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "asyncpg==0.29.0",
    "alembic==1.14.0",
    "greenlet==3.1.1", # SQLAlchemy async 需要
    # HTTP客戶端
    "httpx[http2]==0.28.1",
    "aiohttp==3.9.3",
    "aiofiles==24.1.0",
    # 音頻處理
    "openai==1.82.0",
    "openai-whisper==20240930",
    "faster-whisper==1.1.1",
    "deepgram-sdk==4.1.0",
    "assemblyai==0.40.2",
    "pydub==0.25.1",
    "av==14.4.0",
    # AI服務
    "google-genai==1.16.1",
    # LINE Bot
    "line-bot-sdk==3.8.0",
    # 實用工具
    "click==8.2.1",
    "python-dateutil==2.9.0.post0",
    "cryptography>=45.0.3",
    # HTTP/2 支援
    "h2==4.2.0",
    "hpack==4.1.0",
    "hyperframe==6.1.0",
    "certifi>=2025.4.26",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",  # 用於測試
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_fastapi", "models", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
